k8s/backend-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: kubernetes-101
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: backend
          image: gilxa1226/backend:1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /deployments/config/application.properties
              subPath: application.properties
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
      volumes:
        - name: config-volume
          configMap:
            name: backend-config
            items:
              - key: application.properties
                path: application.properties
        - name: secret-volume
          secret:
            secretName: backend-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kubernetes-101
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
