k8s/backend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: kubernetes-101
spec:
  hosts:
    - backend.127.0.0.1.xip.io
  gateways:
    - frontend-gateway
  http:
    - route:
        - destination:
            host: backend
            port:
              number: 8080
